--- a/api/package.json
+++ b/api/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "nodemon --exec ts-node --files src/index.ts",
     "start:test": "cross-env NODE_ENV='test' DB_DATABASE='jira_test' npm start",
-    "start:production": "pm2 start --name 'jira_api' node -- -r ./tsconfig-paths.js build/index.js",
-    "build": "cd src && tsc",
+    "start:production": "tsc && node -r ./tsconfig-paths.js build/index.js",
+    "build": "rm -rf build && tsc",
     "pre-commit": "lint-staged"
   },
   "dependencies": {
