--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,10 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server",
-    "start:production": "pm2 start --name 'jira_client' server.js",
+    "start:production": "node server.js",
     "test:jest": "jest",
     "test:cypress": "node_modules/.bin/cypress open",
-    "build": "rm -rf build && webpack --config webpack.config.production.js --progress",
+    "build": "rm -rf build && webpack --config webpack.config.production.js > /dev/null",
     "pre-commit": "lint-staged"
   },
   "devDependencies": {
