--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,13 +2,13 @@ FROM node:12.18-alpine
 
 WORKDIR /app
 
-COPY package*.json .
+COPY package*.json ./
 
 RUN npm config set loglevel warn
 
 RUN npm ci
 
-COPY . .
+COPY . ./
 
 RUN npm run build
 
